--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -229,7 +229,7 @@ li.dropdown {
 .rss-icon-svg {
     display: inline-block;
     margin-top: 1px;
-    margin-bottom: -1px;
+    margin-bottom: -3px;
     width: 1.2em;
     height: 1.2em;
 }
@@ -880,6 +880,10 @@ tr.queue-item>td:first-child>a {
 
 .table-messages .table-messages-remove:hover a {
     opacity: 1;
+}
+
+.table-messages .table-messages-none td {
+    padding: 10px 15px !important;
 }
 
 .table-messages .label {
