Show NZB post-age and time of Download

--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -391,6 +391,7 @@
                         <th>$T('rss-skip')</th>
                         <th>$T('rss-filter')</th>
                         <th>$T('size')</th>
+                        <th>$T('nzo-age')</th>
                         <th>$T('sort-title')</th>
                     </tr>
                 </thead>
@@ -405,9 +406,10 @@
                                 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign"></span> $T('link-download')</button>
                             </form>
                         </td>
-                        <td class="align-center">$job[2]</td>
-                        <td class="align-center"> <span>$job[3]</span> </td>
+                        <td>$job[2]</td>
+                        <td>$job[3]</td>
                         <td>$job[5]</td>
+                        <td>$job[7]</td>
                         <td>$job[1]</td>
                     </tr>
                 <!--#end for#-->
@@ -425,6 +427,7 @@
                         <th>$T('rss-skip')</th>
                         <th>$T('rss-filter')</th>
                         <th>$T('size')</th>
+                        <th>$T('nzo-age')</th>
                         <th>$T('sort-title')</th>
                     </tr>
                 </thead>
@@ -439,9 +442,10 @@
                                 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign"></span> $T('link-download')</button>
                             </form>
                         </td>
-                        <td class="align-center">$job[2]</td>
-                        <td class="align-center"> <span>$job[3]</span> </td>
+                        <td>$job[2]</td>
+                        <td>$job[3]</td>
                         <td>$job[5]</td>
+                        <td>$job[7]</td>
                         <td>$job[1]</td>
                     </tr>
                 <!--#end for#-->
@@ -458,7 +462,7 @@
                 <table class="catTable">
                     <thead>
                         <tr>
-                            <th>$T('rss-done')</th>
+                            <th>$T('rss-added')</th>
                             <th>$T('size')</th>
                             <th>$T('sort-title')</th>
                         </tr>
