Accidentally removed 'Restarting SABnzbd' text
And small Glitter-Night fixes

--- a/interfaces/Config/templates/_inc_footer_uc.tmpl
+++ b/interfaces/Config/templates/_inc_footer_uc.tmpl
@@ -28,7 +28,7 @@
     </div>
     <div class="main-restarting modal-backdrop fade in" style="display: none;">
         <div>
-            <strong><span class="glyphicon glyphicon-retweet"></span> $T('wizard-restarting')</strong><br />
+            <strong><span class="glyphicon glyphicon-retweet"></span> $T('restarting-sab')</strong><br />
             <small><span class="restarting-url"></span><span class="dotOne">.</span><span class="dotTwo">.</span><span class="dotThree">.</span></small>
         </div>
     </div>
