--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -52,7 +52,7 @@
         configTranslate.saving = "$T('smpl-saving')";
         configTranslate.failed = "$T('smpl-failed')";
         configTranslate.explainRestart = "$T('explain-Restart')";
-        configTranslate.wizzardRestart = "$T('wizard-restarting')";
+        configTranslate.wizzardRestart = "$T('restarting-sab')";
         configTranslate.needRestart = "$T('restartRequired') $T('explain-needNewLogin')".replace(/\<br(\s*\/|)\>/g, '\n');
         configTranslate.buttonRestart = "$T('button-restart')";
         configTranslate.confirmLeave = "$T('confirmWithoutSavingPrompt')";
