--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -55,7 +55,8 @@
                     <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
                         <label class="config" for="ssl_ciphers">$T('opt-ssl_ciphers')</label>
                         <input type="text" name="ssl_ciphers" id="ssl_ciphers" value="$ssl_ciphers"<!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
-                        <span class="desc">$T('explain-ssl_ciphers') <br>$T('readwiki')</span>
+                        <span class="desc">$T('explain-ssl_ciphers') <br>$T('readwiki')
+                        <a href="${helpuri}advanced/ssl-ciphers" target="_blank">${helpuri}advanced/ssl-ciphers</a></span>
                     </div>
                     <div class="field-pair">
                         <label class="config" for="max_art_tries">$T('opt-max_art_tries')</label>
