--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -27,7 +27,12 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="port">$T('srv-port')</label>
-                    <input type="number" name="port" id="port" size="8" />
+                    <input type="number" name="port" id="port" size="8" value="119" />
+                </div>
+                <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
+                    <label class="config" for="ssl">$T('srv-ssl')</label>
+                    <input type="checkbox" name="ssl" id="ssl" value="1" <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
+                    <span class="desc">$T('explain-ssl')</span>
                 </div>
                 <!-- Tricks to avoid browser auto-fill, fixed on-submit with javascript -->
                 <div class="field-pair">
@@ -40,26 +45,21 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="connections">$T('srv-connections')</label>
-                    <input type="number" name="connections" id="connections" min="0" max="100" />
+                    <input type="number" name="connections" id="connections" min="0" max="100" value="8" />
                 </div>
                 <div class="field-pair">
                     <label class="config" for="priority">$T('srv-priority')</label>
                     <input type="number" name="priority" id="priority" min="0" max="100" /> <i>$T('explain-svrprio')</i>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="retention">$T('srv-retention')</label>
                     <input type="number" name="retention" id="retention" min="0" /> <i>$T('days')</i>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="timeout">$T('srv-timeout')</label>
                     <input type="number" name="timeout" id="timeout" min="30" /> <i>$T('seconds')</i>
                 </div>
-                <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
-                    <label class="config" for="ssl">$T('srv-ssl')</label>
-                    <input type="checkbox" name="ssl" id="ssl" value="1" <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
-                    <span class="desc">$T('explain-ssl')</span>
-                </div>
-                <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
+                <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#--> advanced-settings">
                     <label class="config" for="ssl_verify">$T('opt-ssl_verify')</label>
                     <select name="ssl_verify" id="ssl_verify" <!--#if int($have_ssl_context) == 0 then "disabled=\"disabled\"" else ""#-->>
                           <option value="0">$T('ssl_verify-disabled')</option>
@@ -68,17 +68,17 @@
                     </select>
                     <span class="desc">$T('explain-ssl_verify').replace('. ', '.<br/>')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="send_group">$T('srv-send_group')</label>
                     <input type="checkbox" name="send_group" id="send_group" value="1" />
                     <span class="desc">$T('srv-explain-send_group')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="optional">$T('srv-optional')</label>
                     <input type="checkbox" name="optional" id="optional" value="1" />
                     <span class="desc">$T('explain-optional')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="categories">$T('srv-categories')</label>
                     <select name="categories" id="categories" multiple>
                     <!--#for $cat in $cats#-->
@@ -89,16 +89,17 @@
                     </select>
                     <span class="desc">$T('srv-explain-categories')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="displayname">$T('srv-displayname')</label>
                     <input type="text" name="displayname" id="displayname" />
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="notes">$T('srv-notes')</label>
                     <textarea name="notes" id="notes" rows="3" cols="50"></textarea>
                 </div>
                 <div class="field-pair">
                     <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> $T('button-addServer')</button>
+                    <button class="btn btn-default advancedButton"><span class="glyphicon glyphicon-cog"></span> $T('button-advanced')</button>
                     <button class="btn btn-default testServer" type="button"><span class="glyphicon glyphicon-sort"></span> $T('button-testServer')</button>
                 </div>
                 <div class="field-pair result-box">
@@ -143,6 +144,11 @@
                     <label class="config" for="port$cur">$T('srv-port')</label>
                     <input type="number" name="port" id="port$cur" value="$server['port']" size="8" />
                 </div>
+                <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
+                    <label class="config" for="ssl$cur">$T('srv-ssl')</label>
+                    <input type="checkbox" name="ssl" id="ssl$cur" value="1" <!--#if int($server['ssl']) != 0 and int($have_ssl) == 1 then 'checked="checked"' else ""#--> <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
+                    <span class="desc">$T('explain-ssl')</span>
+                </div>
                 <!-- Tricks to avoid browser auto-fill, fixed on-submit with javascript -->
                 <div class="field-pair">
                     <label class="config" for="${pid}_${cur}0">$T('srv-username')</label>
@@ -160,20 +166,16 @@
                     <label class="config" for="priority$cur">$T('srv-priority')</label>
                     <input type="number" name="priority" id="priority$cur" value="$server['priority']" min="0" max="100" /> <i>$T('explain-svrprio')</i>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="retention$cur">$T('srv-retention')</label>
                     <input type="number" name="retention" id="retention$cur" value="$server['retention']" min="0" /> <i>$T('days')</i>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="timeout$cur">$T('srv-timeout')</label>
                     <input type="number" name="timeout" id="timeout$cur" value="$server['timeout']" min="30" /> <i>$T('seconds')</i>
                 </div>
-                <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
-                    <label class="config" for="ssl$cur">$T('srv-ssl')</label>
-                    <input type="checkbox" name="ssl" id="ssl$cur" value="1" <!--#if int($server['ssl']) != 0 and int($have_ssl) == 1 then 'checked="checked"' else ""#--> <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
-                    <span class="desc">$T('explain-ssl')</span>
-                </div>
-                <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
+
+                <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#--> advanced-settings">
                     <label class="config" for="ssl_verify$cur">$T('opt-ssl_verify')</label>
                     <select name="ssl_verify" id="ssl_verify$cur" <!--#if int($have_ssl_context) == 0 then "disabled=\"disabled\"" else ""#-->>
                           <option value="0" <!--#if $server['ssl_verify'] == 0 then 'selected="selected"' else ""#--> >$T('ssl_verify-disabled')</option>
@@ -182,17 +184,17 @@
                     </select>
                     <span class="desc">$T('explain-ssl_verify').replace('. ', '.<br/>')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="optional$cur">$T('srv-optional')</label>
                     <input type="checkbox" name="optional" id="optional$cur" value="1" <!--#if int($server['optional']) != 0 then 'checked="checked"' else ""#--> />
                     <span class="desc">$T('explain-optional')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="send_group$cur">$T('srv-send_group')</label>
                     <input type="checkbox" name="send_group" id="send_group$cur" value="1" <!--#if int($server['send_group']) != 0 then 'checked="checked"' else ""#--> />
                     <span class="desc">$T('srv-explain-send_group')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="categories$cur">$T('srv-categories')</label>
                     <select name="categories" id="categories$cur" multiple>
                     <!--#for $cat in $cats#-->
@@ -207,16 +209,17 @@
                         $T('srv-explain-no-categories')
                     </div>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="displayname$cur">$T('srv-displayname')</label>
                     <input type="text" name="displayname" id="displayname$cur" value="$server['displayname']" />
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="notes$cur">$T('srv-notes')</label>
                     <textarea name="notes" id="notes$cur" rows="3" cols="50">$server['notes']</textarea>
                 </div>
                 <div class="field-pair">
                     <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
+                    <button class="btn btn-default advancedButton"><span class="glyphicon glyphicon-cog"></span> $T('button-advanced')</button>
                     <button class="btn btn-default testServer" type="button"><span class="glyphicon glyphicon-sort"></span> $T('button-testServer')</button>
                     <button class="btn btn-default delServer"><span class="glyphicon glyphicon-trash"></span> $T('button-delServer')</button>
                 </div>
@@ -310,10 +313,36 @@
             \$(this).attr("value", "$T('showDetails')");
         }
     });
+
     \$('#addServerButton').click(function(){
         \$('#addServer').hide();
         \$('#addServerContent').show();
     });
+
+    \$('[name="ssl"]').click(function() {
+        // Use CSS transitions to do some highlighting
+        var portBox = \$(this).parent().parent().find('[name="port"]')
+        if(this.checked) {
+            // Enabled SSL change port when not already a custom port
+            if(portBox.val() == '119') {
+                portBox.val('563')
+                portBox.addClass('port-highlight')
+            }
+        } else {
+            // Remove SSL port
+            if(portBox.val() == '563') {
+                portBox.val('119')
+                portBox.addClass('port-highlight')
+            }
+        }
+        setTimeout(function() { portBox.removeClass('port-highlight') }, 2000)
+    })
+
+    \$('.advancedButton').click(function(event){
+        \$('.advanced-settings').toggle()
+        return false;
+    })
+
     \$('.testServer').click(function(event){
         removeObfuscation()
         var theButton = \$(this)
@@ -341,6 +370,7 @@
             }
         });
     });
+
     \$('.delServer').click(function(){
         if( confirm("$T('Plush-confirm')") ) {
             \$(this).parents('form:first').attr('action','delServer').submit();
@@ -351,6 +381,7 @@
         }
         return false;
     });
+
     \$('.clrServer').click(function(){
         if( confirm("$T('Plush-confirm')") ) {
             \$(this).parents('form:first').attr('action','clrServer').submit();
@@ -361,6 +392,7 @@
         }
         return false;
     });
+
     \$('.toggleServerCheckbox').click(function(){
         var whichServer = \$(this).attr("name");
         \$.ajax({
