Account for menu-offset when jumping to Config items directly

--- a/interfaces/Config/templates/_inc_footer_uc.tmpl
+++ b/interfaces/Config/templates/_inc_footer_uc.tmpl
@@ -32,5 +32,17 @@
             <small><span class="restarting-url"></span><span class="dotOne">.</span><span class="dotTwo">.</span><span class="dotThree">.</span></small>
         </div>
     </div>
+    <script type="text/javascript">
+        // *only* if we have anchor on the url
+        if(window.location.hash) {
+            // smooth scroll to the anchor id
+            \$('html, body').animate({
+                scrollTop: \$(window.location.hash).offset().top -100 + 'px'
+            }, 750, 'swing');
+            setTimeout(function() {
+                \$(window.location.hash).focus()
+            }, 750)
+        }
+    </script>
 </body>
 </html>
