--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -83,6 +83,13 @@
                 return item
             }
         })
+
+        // to top right away
+        if(window.location.hash) {
+            scroll(0,0);
+            // void some browsers issue
+            setTimeout(function() { scroll(0,0); }, 1);
+        }
     </script>
 </head>
 
