--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -113,6 +113,7 @@
     <div class="section">
         <div class="col2">
             <h3>$T('security') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
+            <p><b>$T('restartRequired')</b></p>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
